<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/eight_dp">

        <ImageView
            android:id="@+id/play"
            style="@style/button_style"
            android:contentDescription="@string/buy_music"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/favorite"
            style="@style/button_style"
            android:contentDescription="@string/favorites"
            android:src="@drawable/folder" />

        <ImageView
            android:id="@+id/playlist"
            style="@style/button_style"
            android:contentDescription="@string/playlist"
            android:src="@drawable/playlist" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/green_line" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/music_list_activity">

    </ListView>

</LinearLayout>