<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.musicapp.MainActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/buy"
            style="@style/button_style"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/buy_music"
            android:src="@drawable/treble"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favorite"
            style="@style/button_style"
            android:contentDescription="@string/favorites"
            android:src="@drawable/folder"
            app:layout_constraintBottom_toBottomOf="@+id/buy"
            app:layout_constraintEnd_toStartOf="@+id/playlist"
            app:layout_constraintStart_toEndOf="@+id/buy"
            app:layout_constraintTop_toTopOf="@+id/buy" />

        <ImageView
            android:id="@+id/playlist"
            style="@style/button_style"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/playlist"
            android:src="@drawable/playlist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@color/green_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite" />

        <ImageView
            android:id="@+id/imageView"
            style="@style/button_style"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/previous"
            android:src="@drawable/previous"
            app:layout_constraintBottom_toBottomOf="@+id/play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play" />

        <ImageView
            android:id="@+id/stop"
            style="@style/button_style"
            android:contentDescription="@string/stop"
            android:src="@drawable/stop"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/play"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="@dimen/sixty_dp"
            android:layout_height="@dimen/sixty_dp"
            android:layout_margin="@dimen/four_dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            android:padding="@dimen/six_dp"
            android:src="@drawable/play"
            app:layout_constraintEnd_toEndOf="@+id/favorite"
            app:layout_constraintStart_toStartOf="@+id/favorite"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <ImageView
            android:id="@+id/pause"
            style="@style/button_style"
            android:contentDescription="@string/pause"
            android:src="@drawable/pause"
            app:layout_constraintBottom_toBottomOf="@+id/play"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/play"
            app:layout_constraintTop_toTopOf="@+id/play" />

        <ImageView
            android:id="@+id/imageView2"
            style="@style/button_style"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/next"
            android:src="@drawable/next"
            app:layout_constraintBottom_toBottomOf="@+id/pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pause" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="@dimen/sixteen_dp"
            android:text="@string/now_playing"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/thirty_two_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/green_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play" />

        <TextView
            android:id="@+id/title_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:padding="@dimen/sixteen_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="@string/wound_upon_wound" />

        <TextView
            android:id="@+id/album_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingStart="@dimen/sixteen_dp"
            android:paddingEnd="@dimen/sixteen_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintEnd_toEndOf="@+id/title_song"
            app:layout_constraintStart_toStartOf="@+id/title_song"
            app:layout_constraintTop_toBottomOf="@+id/title_song"
            tools:text="@string/ad_majorem_sathanas_gloriam" />

        <TextView
            android:id="@+id/artist_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:padding="@dimen/sixteen_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintEnd_toEndOf="@+id/album_song"
            app:layout_constraintStart_toStartOf="@+id/album_song"
            app:layout_constraintTop_toBottomOf="@+id/album_song"
            tools:text="@string/gorgoroth" />

        <TextView
            android:id="@+id/year_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="@dimen/sixteen_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintEnd_toEndOf="@+id/artist_song"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/artist_song"
            app:layout_constraintTop_toBottomOf="@+id/artist_song"
            tools:text="2006" />

        <TextView
            android:id="@+id/number_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:padding="@dimen/sixteen_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintEnd_toEndOf="@+id/year_song"
            app:layout_constraintStart_toStartOf="@+id/year_song"
            app:layout_constraintTop_toBottomOf="@+id/year_song"
            tools:text="2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/four_dp"
            android:text="@string/all_icons"
            android:textSize="@dimen/eight_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-31dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>