<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.PlaylistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/eight_dp">

        <ImageView
            android:id="@+id/buy"
            style="@style/button_style"
            android:contentDescription="@string/buy_music"
            android:src="@drawable/treble" />

        <ImageView
            android:id="@+id/favorite"
            style="@style/button_style"
            android:contentDescription="@string/favorites"
            android:src="@drawable/folder" />

        <ImageView
            android:id="@+id/play"
            style="@style/button_style"
            android:contentDescription="@string/playlist"
            android:src="@drawable/play" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@color/green_line" />

    <ListView
        android:id="@+id/list_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    </ListView>


</LinearLayout>
